--- a/c-sharp.csproj
+++ b/c-sharp.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <RootNamespace>c_sharp</RootNamespace>
+    <RootNamespace>war</RootNamespace>
   </PropertyGroup>
 
 </Project>
